--- a/app/src/main/res/layout-land/activity_customer_main_page.xml
+++ b/app/src/main/res/layout-land/activity_customer_main_page.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#FFFFFF"
     android:backgroundTint="#FFFFFF"
     tools:context=".Customer_main_page">
 
@@ -12,7 +13,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.10218978" />
+        app:layout_constraintGuide_percent="0.10278114" />
 
     <TextView
         android:id="@+id/textView52"
@@ -25,7 +26,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/btn_card"
+        android:id="@+id/btn_Mode_change_page"
         android:layout_width="150dp"
         android:layout_height="60dp"
         android:layout_marginEnd="16dp"
@@ -34,6 +35,7 @@
         android:text="모드 전환"
         android:textColor="#504E4E"
         android:textSize="24sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/guideline"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -42,7 +44,7 @@
         android:id="@+id/textView"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:background="#FFEAEA"
+        android:background="#FFF7F7"
         android:gravity="center_horizontal"
         android:textColor="#FFFFFF"
         android:textSize="24dp"
@@ -51,7 +53,7 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/guideline"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintVertical_bias="0.0" />
 
     <TextView
         android:id="@+id/user_shop_name"
@@ -61,7 +63,7 @@
         android:gravity="center"
         android:text="상호명"
         android:textColor="#FFFFFF"
-        android:textSize="34sp"
+        android:textSize="48sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/guideline"
         app:layout_constraintEnd_toEndOf="parent"
@@ -134,6 +136,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView"
@@ -151,10 +154,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_begin="736dp" />
+        app:layout_constraintGuide_end="60dp" />
 
     <Button
-        android:id="@+id/btn_Eat_main_menu_page5"
+        android:id="@+id/btn_TakeOut_main_menu_page"
         android:layout_width="0dp"
         android:layout_height="400dp"
         android:layout_marginStart="80dp"
