--- a/app/src/main/res/layout-land/activity_small_menu_page1_4.xml
+++ b/app/src/main/res/layout-land/activity_small_menu_page1_4.xml
@@ -128,9 +128,9 @@
                 android:layout_height="60dp"
                 android:layout_marginEnd="16dp"
                 android:backgroundTint="#00FFFFFF"
-                app:layout_constraintBottom_toBottomOf="@+id/btn_Choice_mode_page"
+                app:layout_constraintBottom_toBottomOf="@+id/btn_back"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="@+id/btn_Choice_mode_page"
+                app:layout_constraintTop_toTopOf="@+id/btn_back"
                 app:srcCompat="@drawable/shoppingcart" />
 
             <!-- 뚜껑 끝 -->
@@ -193,7 +193,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/btn_Hot_cold_page2" />
 
             <Button
-                android:id="@+id/btn_Choice_mode_page"
+                android:id="@+id/btn_back"
                 android:layout_width="150dp"
                 android:layout_height="60dp"
                 android:layout_marginEnd="16dp"
