--- a/app/src/main/res/layout-land/activity_start_kiosk_page.xml
+++ b/app/src/main/res/layout-land/activity_start_kiosk_page.xml
@@ -55,7 +55,7 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <Button
-            android:id="@+id/btn_Choice_mode_page"
+            android:id="@+id/btn_back"
             android:layout_width="150dp"
             android:layout_height="60dp"
             android:layout_marginEnd="20dp"
